--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -4,7 +4,9 @@ server {
    listen 80; ## listen for ipv4
    #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
    
+   #เราได้ตั้งค่า Nginx ให้รันใน Folder /var/www/html    
    root /var/www/html;
+   #กำหนด index file    
    index index.php;
 
    location / {
@@ -23,6 +25,8 @@ server {
    location ~ \.php$ {
        include fastcgi_params;
        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+       # ส่วนที่จะรัน php กำหนด fastcgi_pass php:9000 เพื่อให้ Nginx ส่ง Script ไปยัง php FPM 
+       # ซึ่งเรา Config ให้เปิด Port 9000 ไว้ใน php Container ของไฟล์ docker-compose.yml ด้วย
        fastcgi_pass php:9000;
        try_files $uri =404;
    }
