--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
             MYSQL_DATABASE: MYSQL_DATABASE
             MYSQL_USER: MYSQL_USER
             MYSQL_PASSWORD: MYSQL_PASSWORD
+        ports: 
+            - "3306:3306"
         volumes:
             - ./db/initdb/:/docker-entrypoint-initdb.d
             # เมื่อรัน Container แล้ว จะ Import ไฟล์ ".sql" ใน Folder /docker-entrypoint-initdb.d ให้อัตโนมัติ
